changed to index

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <nav id= "myclass">
 <ul>
-  <li><a href="chelseasportfolio.html">HOME</a></li>
+  <li><a href="index.html">HOME</a></li>
   <li><a href="projects.html">PROJECTS</a></li>
   <li><a href="about.html">ABOUT</a></li>
 </ul>
