--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
 
 <div id = "links">
 <ul>
-  <li><a href="chelseasportfolio.html">HOME</a></li>
+  <li><a href="index.html">HOME</a></li>
   <li><a href="projects.html">PROJECTS</a></li>
   <li><a href="about.html">ABOUT</a></li>
 </ul>
