--- a/projects.html
+++ b/projects.html
@@ -37,6 +37,10 @@
 
 
 
+<div id="save the ocean">
+<h3><a href="save-the-ocean/index.html">Save the Ocean </a></h3>
+      <!--<iframe allowtransparency="true" width="485" height="402" src="http://scratch.mit.edu/projects/embed/116628149/?autostart=false" frameborder="0" allowfullscreen></iframe>-->
+</div>
 
 <div id="paddleball">
 <h3><a href="https://scratch.mit.edu/projects/116628149/#editor">Paddle Ball </a></h3>
