--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
 
 
 <div id="save the ocean">
-<h3><a href="save-the-ocean/index.html">Save the Ocean </a></h3>
+<h3><a href="../save-the-ocean/index.html">Save the Ocean </a></h3>
       <!--<iframe allowtransparency="true" width="485" height="402" src="http://scratch.mit.edu/projects/embed/116628149/?autostart=false" frameborder="0" allowfullscreen></iframe>-->
 </div>
 
