--- a/about.html
+++ b/about.html
@@ -17,7 +17,9 @@
 <div id ="aboutme"> 
 <h1> ABOUT CHELSEA </h1>
 <img src = "profile.jpg.png" alt= "profile"> </img>
-<p> Chelsea is a junior at Burlingame High School. This summer, she is participating in the Girls Who Code Summer Immersion Program at Twitter Headquarters in San Francisco. <p>
+<p> My name is Chelsea and I am currently a junior at Burlingame High School. 
+	This is my personal website that I made during the Girls Who Code Summer Immersion Program last summer at Twitter HQ in SF. 
+	Check out some of my other work <a href = "https://github.com/chelsealo"> here </a>. <p>
 </div>
 
 </body>
