--- a/about.html
+++ b/about.html
@@ -18,8 +18,8 @@
 <h1> ABOUT CHELSEA </h1>
 <img src = "profile.jpg.png" alt= "profile"> </img>
 <p> My name is Chelsea and I am currently a junior at Burlingame High School. 
-	This is my personal website that I made during the Girls Who Code Summer Immersion Program last summer at Twitter HQ in SF. 
-	Check out some of my other work <a href = "https://github.com/chelsealo"> here </a>. <p>
+	I created this website during the Girls Who Code Summer Immersion Program last summer at Twitter HQ in SF. 
+	Check out some of my other work <a href = "https://github.com/chelsealo">here</a>. <p>
 </div>
 
 </body>
