--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 <img src = "profile.jpg.png" alt= "profile"> </img>
 <p> My name is Chelsea and I am currently a junior at Burlingame High School. 
 	I created this website during the Girls Who Code Summer Immersion Program last summer at Twitter HQ in SF. 
-	Check out some of my other work <a href = "https://github.com/chelsealo">here</a>. <p>
+	Check out some of my other work <a href = "https://github.com/chelsealo">here.</a> <p>
 </div>
 
 </body>
