--- a/projects.html
+++ b/projects.html
@@ -42,6 +42,11 @@
       <!--<iframe allowtransparency="true" width="485" height="402" src="http://scratch.mit.edu/projects/embed/116628149/?autostart=false" frameborder="0" allowfullscreen></iframe>-->
 </div>
 
+<div id ="empower">
+	<h3><a href = http://peopletoempower.com/> EMPOWER </a></h3>
+<p> GWC SIP Final Project </p>
+</div>
+
 <div id="paddleball">
 <h3><a href="https://scratch.mit.edu/projects/116628149/#editor">Paddle Ball </a></h3>
       <iframe allowtransparency="true" width="485" height="402" src="http://scratch.mit.edu/projects/embed/116628149/?autostart=false" frameborder="0" allowfullscreen></iframe>
